# Intelligent-helmet

./: README.md
LowerComp/: CMakeLists.txt  config.json
LowerComp/include/: Protocol.h  SystemConfig.h  hardwareserver.h  tcpserver.h  uartserver.h  udpserver.h
LowerComp/include/Message/: BaseMessage.h  CalCRC16.h  FifoMessage.h  MqMessage.h
LowerComp/include/common/: Typedef.h  filter.h
LowerComp/include/hardware/: MQ135.h  basehardware.h  beep.h  dht11.h  gps.h  led.h  mpu6050.h
LowerComp/lib/: CMakeLists.txt
LowerComp/lib/jsoncpp/: CMakeLists.txt
LowerComp/lib/nmealib/: CMakeLists.txt
LowerComp/lib/nmealib/include/nmea/: config.h  context.h  generate.h  generator.h  gmath.h  info.h  nmea.h  parse.h  parser.h  sentence.h  time.h  tok.h  units.h
LowerComp/lib/nmealib/src/: context.c  generate.c  generator.c  gmath.c  info.c  parse.c  parser.c  sentence.c  time.c  tok.c
LowerComp/module/DHT11/: Makefile  dht11.c
LowerComp/module/LED/: .led.ko.cmd  .led.mod.o.cmd  .led.o.cmd  Makefile  led.c  led.ko  led.mod.c  modules.order
LowerComp/module/LED/.tmp_versions/: led.mod
LowerComp/module/MQ135/: .MQ135.ko.cmd  .MQ135.mod.o.cmd  .MQ135.o.cmd  MQ135.c  MQ135.ko  MQ135.mod.c  Makefile  modules.order
LowerComp/module/MQ135/.tmp_versions/: MQ135.mod
LowerComp/module/beep/: .beep.ko.cmd  .beep.mod.o.cmd  .beep.o.cmd  Makefile  beep.c  beep.ko  beep.mod.c  modules.order
LowerComp/module/beep/.tmp_versions/: beep.mod
LowerComp/module/dts-overlay/: MQ135-overlay.dts  beep-overlay.dts  imx-fire-dht11-overlay.dts  imx-fire-i2c_mpu6050-overlay.dts  led-overlay.dts
LowerComp/module/dts-overlay/-dtbo/: MQ135.dtbo  beep.dtbo  led.dtbo
LowerComp/module/iic_mpu6050/: i2c_mpu6050.c
LowerComp/src/: SystemConfig.cpp  hardwareserver.cpp  main.cpp
LowerComp/src/Message/: BaseMessage.cpp  CalCRC16.cpp  FifoMessage.cpp  MqMessage.cpp
LowerComp/src/common/: Typedef.cpp  filter.cpp
LowerComp/src/hardware/: MQ135.cpp  beep.cpp  dht11.cpp  gps.cpp  led.cpp  mpu6050.cpp
UpperCom/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  UpperCom.pro  config.json  find_qt_path.sh  images.qrc  main.cpp
UpperCom/include/: common.h  config.h  gpsinfownd.h  hardwareclient.h  hygrownd.h  protocol.h  sendthread.h  tcpclient.h  thermwnd.h  typedef.h  uartclient.h  udpclient.h
UpperCom/src/: common.cpp  config.cpp  gpsinfownd.cpp  hardwareclient.cpp  hygrownd.cpp  protocol.cpp  sendthread.cpp  tcpclient.cpp  thermwnd.cpp  uartclient.cpp  udpclient.cpp
